Add an edit and delete functionality to topic-replies. Add WebApi to project.

--- a/Source/Blog.Services/Blog.Services.csproj
+++ b/Source/Blog.Services/Blog.Services.csproj
@@ -89,6 +89,7 @@
     <Compile Include="DataServices\AccountDataService.cs" />
     <Compile Include="AccountServices\AccountProfileService.cs" />
     <Compile Include="DataServices\BaseDataService.cs" />
+    <Compile Include="DataServices\ReplyDataService.cs" />
     <Compile Include="DataServices\TopicDataService.cs" />
     <Compile Include="DropboxService.cs" />
     <Compile Include="EmailService.cs" />
