Adding externals login for google and facebook apis.

--- a/Source/Blog.WebApplication/Views/Web.config
+++ b/Source/Blog.WebApplication/Views/Web.config
@@ -20,7 +20,8 @@
 				<add namespace="System.Web.Mvc.Html" />
 				<add namespace="System.Web.Optimization"/>
 				<add namespace="System.Web.Routing" />
-				<add namespace="Microsoft.AspNet.Identity" />
+        <add namespace="Microsoft.AspNet.Identity" />
+        <add namespace="Microsoft.Owin.Security" />
 				<add namespace="Blog.Models" />
 				<add namespace="Blog.Models.BindingModels" />
 				<add namespace="Blog.Models.ViewModels.AccountViewModels" />
