--- a/Source/Blog.WebApplication/Views/Web.config
+++ b/Source/Blog.WebApplication/Views/Web.config
@@ -24,7 +24,8 @@
         <add namespace="Microsoft.Owin.Security" />
 				<add namespace="Blog.Models" />
 				<add namespace="Blog.Models.BindingModels" />
-				<add namespace="Blog.Models.ViewModels.AccountViewModels" />
+        <add namespace="Blog.Models.ViewModels" />
+        <add namespace="Blog.Models.ViewModels.AccountViewModels" />
 				<add namespace="Blog.Models.ViewModels.ManageAccountViewModels" />
 				<add namespace="Blog.Services" />
 				<add namespace="Blog.WebApplication" />
