--- a/Source/Blog.Services/Blog.Services.csproj
+++ b/Source/Blog.Services/Blog.Services.csproj
@@ -76,6 +76,9 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Xml.Linq" />
@@ -88,6 +91,7 @@
   <ItemGroup>
     <Compile Include="DataServices\AccountDataService.cs" />
     <Compile Include="AccountServices\AccountProfileService.cs" />
+    <Compile Include="DataServices\ApiDataService.cs" />
     <Compile Include="DataServices\BaseDataService.cs" />
     <Compile Include="DataServices\ReplyDataService.cs" />
     <Compile Include="DataServices\TopicDataService.cs" />
