--- a/Source/Blog.Services/packages.config
+++ b/Source/Blog.Services/packages.config
@@ -13,4 +13,5 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="RestSharp" version="105.0.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
