--- a/Source/Blog.WebApplication/Web.config
+++ b/Source/Blog.WebApplication/Web.config
@@ -20,7 +20,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.6.1" />
+    <httpRuntime targetFramework="4.6.1" maxRequestLength="20971520" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
