--- a/Source/Blog.WebApplication/Blog.WebApplication.csproj
+++ b/Source/Blog.WebApplication/Blog.WebApplication.csproj
@@ -245,6 +245,7 @@
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\commentAcceptHandler.js" />
     <Content Include="Scripts\editUserCommentHandler.js" />
     <Content Include="Scripts\jquery-3.1.1.js" />
     <Content Include="Scripts\jquery-3.1.1.min.js" />
